--- a/css/sections.css
+++ b/css/sections.css
@@ -300,7 +300,7 @@
 .carousel {
     height: 100vh;
     max-height: 650px;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     position: relative;
 }
@@ -319,8 +319,9 @@
 }
 
 .carousel .list .item .content .des {
-    height: 100px;
-    overflow: auto;
+    max-height: 100px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .carousel .list .item .content {
